--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,8 @@ title: "Who earns under $15 per hour?"
 knitr::opts_chunk$set(
   echo = FALSE, 
   message = FALSE,
-  fig.height = 6
+  fig.height = 6,
+  dev = 'svg'
 )
 
 library(tidyverse)
@@ -19,7 +20,7 @@ library(scales)
 library(hrbrthemes)
 
 covariates <- c(
-  "year", "month", "orgwgt", "wageotc",
+  "year", "month", "orgwgt", "wageotc", "wage",
   "wbhao", "female", "educ", "age",
   "married", "paidhre", "mind03", "mocc03",
   "region"
@@ -28,7 +29,7 @@ groups <- c(
   "overall", "wbhao", "female", "educ", "region"
 )
 
-org_raw <- load_org(2021:2022, all_of(covariates))
+org_raw <- load_org(2022:2022, all_of(covariates))
 
 summarized <- org_raw |> 
   rename(my_wage = wageotc) |> 
@@ -61,24 +62,26 @@ summarized <- org_raw |>
   ) |> 
   ungroup() |>  
   pivot_longer(starts_with("under15")) |> 
-  filter(str_detect(name, "share_ma|count_ma")) |> 
-  filter(month_date == ym("2022m2")) 
-
+  filter(str_detect(name, "share_ma|count_ma"))
 
 max_date <- max(summarized$month_date)
 min_date <- max_date - months(2)
+
+summarized_one_month <- summarized  |> 
+  filter(month_date == max_date) 
+
 date_range <- paste(
   format(min_date, format = "%B %Y"), 
   "through", 
   format(max_date, format = "%B %Y")
 )
 
-count_overall <- summarized |> 
+count_overall <- summarized_one_month |> 
   filter(group_name == "overall" & name == "under15_count_ma") |> 
   pull() |> 
   number(accuracy = 0.1)
 
-share_overall <- summarized |> 
+share_overall <- summarized_one_month |> 
   filter(group_name == "overall" & name == "under15_share_ma") |> 
   pull() |> 
   percent(accuracy = 0.1)
@@ -121,45 +124,32 @@ bar_plot <- function(df, category, title, bar_width = NULL, label_angle = NULL) 
 }
 
 table_counts <- function(df, category, title) {
-  summarized |> 
-  filter(group_name == category) |> 
-  filter(name == "under15_count_ma") |> 
-  mutate(group = reorder(group_value_label, -value)) |> 
-  mutate(value = comma(round(value * 10) * 10^5), accuracy = 1) |> 
-  select(group, value) |> 
-  knitr::kable(
-    col.names = c(title, "Earning under $15")
-  )
+  df |> 
+    filter(group_name == category) |> 
+    filter(name == "under15_count_ma") |> 
+    mutate(group = reorder(group_value_label, -value)) |> 
+    mutate(value = comma(round(value * 10) * 10^5), accuracy = 1) |> 
+    select(group, value) |> 
+    knitr::kable(
+      col.names = c(title, "Earning under $15")
+    )
 }
 
 ```
 
 On average, `r count_overall` million workers earned less than $15/hour during the last three months, about `r share_overall` of the workforce.
 
-Data from the EPI extracts of the CPS-ORG, `r date_range`.
+Analysis by Ben Zipperer of the EPI extracts of the CPS-ORG, `r date_range`.
 
 <div class = "row">
 <div class = "col-md-8">
 ```{r}
-bar_plot(summarized, "wbhao", "Race")
+bar_plot(summarized_one_month, "wbhao", "Race")
 ```
 </div>
 <div class = "col-md-4">
 ```{r}
-table_counts(summarized, "wbhao", "Race")
-```
-</div>
-</div>
-
-<div class = "row">
-<div class = "col-md-8">
-```{r}
-bar_plot(summarized, "female", "Gender")
-```
-</div>
-<div class = "col-md-4">
-```{r}
-table_counts(summarized, "female", "Gender")
+table_counts(summarized_one_month, "wbhao", "Race")
 ```
 </div>
 </div>
@@ -167,12 +157,25 @@ table_counts(summarized, "female", "Gender")
 <div class = "row">
 <div class = "col-md-8">
 ```{r}
-bar_plot(summarized, "educ", "Education")
+bar_plot(summarized_one_month, "female", "Gender")
 ```
 </div>
 <div class = "col-md-4">
 ```{r}
-table_counts(summarized, "educ", "Education")
+table_counts(summarized_one_month, "female", "Gender")
+```
+</div>
+</div>
+
+<div class = "row">
+<div class = "col-md-8">
+```{r}
+bar_plot(summarized_one_month, "educ", "Education")
+```
+</div>
+<div class = "col-md-4">
+```{r}
+table_counts(summarized_one_month, "educ", "Education")
 ```
 </div>
 </div>
@@ -181,14 +184,14 @@ table_counts(summarized, "educ", "Education")
 <div class = "row">
 <div class = "col-md-8">
 ```{r}
-bar_plot(summarized, "region", "Census region")
+bar_plot(summarized_one_month, "region", "Census region")
 ```
 </div>
 <div class = "col-md-4">
 ```{r}
-table_counts(summarized, "region", "Census region")
+table_counts(summarized_one_month, "region", "Census region")
 ```
 </div>
 </div>
 
-
+ 
